# firma-cr

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/firma-cr-card/: Cargo.toml
crates/firma-cr-card/src/: digest.rs  error.rs  lib.rs  pkcs11_client.rs  probe.rs
crates/firma-cr-core/: .gitignore  Cargo.toml  README.md
crates/firma-cr-core/src/: c14n.rs  cades.rs  cert.rs  error.rs  lib.rs  net.rs  pades.rs  signer.rs  tsa.rs  xades.rs
crates/firma-cr-core/src/agent/: DESIGN.md  api.rs  bccr-ca.pem  dyn_request.rs  http.rs  mod.rs  session.rs  sign.rs  token.rs
crates/firma-cr-core/src/revocation/: aia.rs  crl.rs  mod.rs  ocsp.rs
crates/firma-cr-core/src/verify/: chain.rs  cms.rs  mod.rs  pades.rs  revocation.rs  tsa.rs  xades.rs
crates/firma-cr-core/tests/: c14n_vectors.rs  integration_cades.rs  integration_pades.rs  integration_verify.rs  integration_xades.rs
crates/firma-cr-core/tests/c14n_vectors/: 01-unused-ns-dropped.in.xml  01-unused-ns-dropped.out.xml  02-redundant-ns-redeclare.in.xml  02-redundant-ns-redeclare.out.xml  03-attr-sorting.in.xml  03-attr-sorting.out.xml  04-empty-element-expand.in.xml  04-empty-element-expand.out.xml  05-comment-dropped.in.xml  05-comment-dropped.out.xml  06-text-escaping.in.xml  07-cdata-to-text.in.xml  07-cdata-to-text.out.xml  08-attr-value-escape.out.xml  09-default-namespace.out.xml  10-xml-decl-stripped.in.xml  10-xml-decl-stripped.out.xml  11-text-tab-and-newline.out.xml  12-attr-whitespace-escaped.in.xml  12-attr-whitespace-escaped.out.xml  13-default-ns-override.in.xml  13-default-ns-override.out.xml  14-mixed-ns-ordering.in.xml  14-mixed-ns-ordering.out.xml  README.md  regen.sh
crates/firma-cr-core/tests/fixtures/: sample-cert.pem  small.xml
crates/firma-cr-core/tests/test_ca/: gen-test-ca.sh
docs/: smartcard-commands.md  windows-build.md
docs/audit/: SECURITY-AUDIT-2026-06.md  SECURITY-AUDIT-2026-06.md.p7s  SECURITY-AUDIT-2026-06b.md  SECURITY-AUDIT-2026-06b.md.p7s  audit-cert.pem  gen-audit-cert.sh  verify-audit.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: c14n.rs  cms.rs  pades.rs
fuzz/seeds/c14n/: seed.xml
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: main.ts  pdfview.ts  place.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/assets/: bccr-chain.pem
packaging/: make-debs.sh
scripts/tester/: 10-install-deps.sh  20-build-stack.sh  30-check-stack.sh  40-run-gui.sh  CARD-ACCEPTANCE-TEST.md  COMMANDS.md  README.md  SECURITY-TEST-FLOW.md  env.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
