[package]
name = "firma-cr-tauri"
version = "0.0.1"
edition = "2021"
authors = ["Shaun Savage <savages@crmep.com>"]
description = "Tauri GUI front-end for firma-cr-pades (Phase 1: PAdES-B-B PDF signing via the BCCR card)"
license = "GPL-3.0-or-later"

[lib]
# Tauri v2: the app lives in a lib (`run()`); main.rs just calls it. cdylib is
# required for the mobile targets, the rest for desktop.
name = "firma_cr_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The native backend: reuse the document-signing library directly. This is the
# whole point of Phase 1 — no PKCS#11 shim, no WASM; the Rust backend calls the
# real CardClient + pades::sign_pdf over the system PKCS#11 module.
firma-cr-pades = { path = "../.." }
# Embed the /dyn web-signing agent (GAUDI's role) so this one app is both the
# desktop signer and the local browser bridge. Path dep on the sibling repo
# (clone digitalfirma next to firma-cr-pades).
firma-cr-agent = { path = "../../../digitalfirma/firma-cr-agent" }

[features]
# Phase 1 ships PAdES-B-B only; the timestamp/LT profiles stay behind the lib's
# own scaffolds until a TSA endpoint is wired.
default = []
