[package]
name = "firma-cr-card"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Shared PKCS#11 card-access layer for the Costa Rica BCCR Firma Digital stack"

[dependencies]
cryptoki = "0.12.0"
sha2 = "0.11.0"
hex = "0.4.3"
log = "0.4.30"
thiserror = "2.0.18"
# Wipe our intermediate copy of the card PIN from the heap after login.
# (cryptoki's AuthPin = secrecy::SecretString already zeroizes the copy it owns.)
zeroize = "1"

# --- probe feature (optional): PC/SC-direct PKCS#15 discovery / card probe. ---
# Kept off by default so pure-signing consumers (firma-cr-core) don't pull PC/SC.
anyhow = { version = "1", optional = true }
pcsc = { version = "2.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
probe = ["dep:anyhow", "dep:pcsc", "dep:serde"]
